# graphify

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: docker-mcp-sqlite.md  how-it-works.md
docs/translations/: README.uk-UA.md
evaluations/: README.md
evaluations/rsl-siege-manager/: results.md  runbook.md
evaluations/rsl-siege-manager/graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify/: __main__.py  affected.py  analyze.py  benchmark.py  build.py  cache.py  callflow_html.py  cluster.py  detect.py  diagnostics.py  export.py  extract.py  global_graph.py  google_workspace.py  hooks.py  llm.py  mcp_ingest.py  prs.py  report.py  security.py  semantic_cleanup.py  serve.py  skill-copilot.md  skill-windows.md  skill.md  symbol_resolution.py  tree_html.py  watch.py  wiki.py
tests/: bench_extract.py  conftest.py  test_affected_cli.py  test_analyze.py  test_astro_extraction.py  test_benchmark.py  test_build.py  test_cache.py  test_callflow_html.py  test_charmap_encoding.py  test_chunking.py  test_claude_cli_backend.py  test_claude_md.py  test_cli_export.py  test_cluster.py  test_dedup.py  test_detect.py  test_explain_cli.py  test_export.py  test_extract.py  test_extract_cli.py  test_global_graph.py  test_google_workspace.py  test_hooks.py  test_import_extension_resolution.py  test_incremental.py  test_install.py  test_install_strings.py  test_install_upgrade.py  test_issue_563.py  test_js_import_resolution.py  test_languages.py  test_llm_backends.py  test_mcp_ingest.py  test_member_call_resolution.py  test_multigraph_compat.py  test_multigraph_diagnostics.py  test_multilang.py  test_pascal.py  test_path_cli.py  (+12 more)
tests/fixtures/: barrel_reexport.ts  cjs_require.js  cookieHelpers.ts  deploy_guide.md  dynamic_import.ts  sample.cs  sample.dfm  sample.json  sample.lfm  sample.lpk  sample.mcp.json  sample.pas  sample.scss  sample.sh  sample.sql  sample.tsx  sample_alter_fk.sql  sample_preprocessed.F90  sample_schema_qualified.sql  sample_tsconfig.json  storageHelpers.ts  urlHelpers.ts
tests/fixtures/crate_a/src/: lib.rs
tests/fixtures/crate_b/: Cargo.toml
tests/fixtures/crate_b/src/: lib.rs
tests/fixtures/swift_cross_file/: Foo+Ext.swift  Foo.swift
worked/rsl-siege-manager/: GRAPH_REPORT.md  README.md  graph.html  graph.json  manifest.json  review.md
