[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphifyy"
version = "0.8.23"
description = "Turn any folder of code, docs, papers, images, or videos into a queryable knowledge graph — Claude Code skill included"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["claude", "claude-code", "knowledge-graph", "rag", "graphrag", "obsidian", "community-detection", "tree-sitter", "leiden", "llm"]
requires-python = ">=3.10"
dependencies = [
    "networkx",
    "datasketch",
    "rapidfuzz",
    "tree-sitter>=0.23.0",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-groovy",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-ruby",
    "tree-sitter-c-sharp",
    "tree-sitter-kotlin",
    "tree-sitter-scala",
    "tree-sitter-php",
    "tree-sitter-swift",
    "tree-sitter-lua",
    "tree-sitter-zig",
    "tree-sitter-powershell",
    "tree-sitter-elixir",
    "tree-sitter-objc",
    "tree-sitter-julia",
    "tree-sitter-verilog",
    "tree-sitter-fortran",
    "tree-sitter-bash",
    "tree-sitter-json",
    "tree-sitter-css",
    "tree-sitter-dm",
]


[project.optional-dependencies]
mcp = ["mcp"]
neo4j = ["neo4j"]
pdf = ["pypdf", "markdownify"]
watch = ["watchdog"]
svg = ["matplotlib"]
leiden = ["graspologic; python_version < '3.13'"]
office = ["python-docx", "openpyxl"]
google = ["openpyxl"]
video = ["faster-whisper", "yt-dlp"]
bedrock = ["boto3"]
chinese = ["jieba"]
sql = ["tree-sitter-sql"]
all = ["mcp", "neo4j", "pypdf", "markdownify", "watchdog", "graspologic; python_version < '3.13'", "python-docx", "openpyxl", "faster-whisper", "yt-dlp", "matplotlib", "boto3", "tree-sitter-sql", "jieba"]
dev = ["bandit>=1.9.4", "build>=1.5.0", "hypothesis>=6.152.7", "pip-audit>=2.10.0", "pre-commit>=4.6.0", "pyright>=1.1.409", "pytest>=9.0.3", "pytest-cov>=7.1.0", "ruff>=0.15.13", "safety>=3.7.0", "setuptools>=82.0.1", "wheel>=0.47.0"]

[project.scripts]
graphify = "graphify.__main__:main"


[tool.setuptools]
packages = ["graphify"]
include-package-data = false

[tool.setuptools.package-data]
graphify = ["skill.md", "skill-windows.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "graphify-benchmark", "graphify_eval", "graphify_test",
    "worked", "llm-stack-corpus", "llm-stack-demo", "product-site",
    "scripts", "ebook", ".github", "dist", "build",
]

[tool.bandit]
skips = ["B404"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Keep the committed baseline conservative until upstream adopts a broader lint policy.
select = ["E9", "F63", "F7", "F82"]

[tool.pyright]
include = ["graphify", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
